# github-user

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: client.rs  main.rs  models.rs
ui/: app.slint  structs.slint  theme.slint
ui/components/: detail_page.slint  list_page.slint  repo_card.slint  stat_card.slint  user_row.slint
