[package]
name = "github_user"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
slint = "1.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dotenvy = "0.15"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

[build-dependencies]
slint-build = "1.15"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"